--- a/styles/styles.css
+++ b/styles/styles.css
@@ -158,8 +158,11 @@ main{
     
     main{
         display: flex;
-        max-width: 815px;
+        max-width: 816px;
         align-items: center;
+        -webkit-box-shadow: 0px 19px 50px -11px rgba(148,148,148,1);
+    -moz-box-shadow: 0px 19px 50px -11px rgba(148,148,148,1);
+    box-shadow: 0px 19px 50px -11px rgba(148,148,148,1);
     }
 
     .main__image{
